Altera client de requisições http e altera mappers